--- a/style.css
+++ b/style.css
@@ -1034,11 +1034,7 @@ footer a i{
     }
 
     .img-about img{
-        width: 100px;
-    }
-
-    .info-about1, .info-about2, .info-about3{
-        display: none;
+        max-width: 300px;
     }
 
     .img-about p{
